--- a/platformio.ini
+++ b/platformio.ini
@@ -19,4 +19,5 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.18.5
 	adafruit/Adafruit BME280 Library@^2.2.1
 	adafruit/Adafruit Unified Sensor@^1.1.4
+	adafruit/DHT sensor library@^1.4.3
 monitor_speed = 115200
